--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -42,8 +42,14 @@
             {{ object_.id|bookmark_toggle|safe }}
         </div>
         <h1>{{ object_.name }}</h1>
-        {{ tables['info']|data_table|safe }}
-        {{ object_|description|safe }}
+        <div>
+            {{ profile_image_id|display_profile_image|safe }}
+            <div style="float:left;">
+                {{ tables['info']|data_table|safe }}
+                {{ object_|description|safe }}
+            </div>
+            <div style="clear:both;"></div>
+        </div>
     </div>
     {% if gis_data %}
         <div id="tab-map">
