--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -12,6 +12,7 @@
         <li><a href="#tab-nodes">{{ _('type')|uc_first }} ({{ tables['nodes']['data']|length|format_number }})</a></li>
         <li><a href="#tab-missing-files">{{ _('missing files')|uc_first }} ({{ tables['missing_files']['data']|length|format_number }})</a></li>
         <li><a href="#tab-orphaned-files">{{ _('orphaned files')|uc_first }} ({{ tables['orphaned_files']['data']|length|format_number }})</a></li>
+        <li><a href="#tab-circular">{{ _('circular dependencies')|uc_first }} ({{ tables['circular']['data']|length|format_number }})</a></li>
     </ul>
     <div id="tab-orphan">
         {% if tables['orphans']['data']|length > 0 and 'admin'|is_authorized %}
@@ -45,6 +46,9 @@
             </div>
         {% endif %}
         {{ tables['orphaned_files']|pager|safe }}
+    </div>
+    <div id="circular">
+        {{ tables['circular']|pager|safe }}
     </div>
 </div>
 {% endblock %}
