--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -17,7 +17,7 @@
             var width = {{ network_params['options']['width'] }};
             var height = {{ network_params['options']['height'] }};
             var charge = {{ network_params['options']['charge'] }};
-            var distance = {{ network_params['options']['distance'] }}
+            var distance = {{ network_params['options']['distance'] }};
         </script>
         <script src="/static/js/network.js"></script>
         <script src="/static/vendor/saveSvgAsPng-1.4.5/saveSvgAsPng.js"></script>
@@ -30,7 +30,8 @@
             {{ form.csrf_token }}
             <h2>{{ _('classes')|uc_first }}</h2>
             <div>
-                <div style="float:left">
+                <div id="classes" style="float:left">
+                    <p id="select_all" class="select_all">{{ _('select all')|uc_first }}</p>
                     {% for item in form.classes %}
                         {{ form['color_' + item.data] }} {{ item }} {{ item.label }}<br />
                     {% endfor %}
@@ -39,7 +40,10 @@
             <div style="clear:both;"></div>
             <p>{{ form.orphans }} {{ _('show orphans')|uc_first }}</p>
             <h2>{{ _('links')|uc_first }}</h2>
-            {{ form.properties }}
+            <p id="select_all_links" class="select_all">{{ _('deselect all')|uc_first }}</p>
+            <div id="links">
+                {{ form.properties }}
+            </div>
             <h2>{{ _('network options')|uc_first }}</h2>
             {{ form.width }} {{ form.width.label }}<br />
             {{ form.height }} {{ form.height.label }}<br />
@@ -48,4 +52,39 @@
             <input id="save" name="save" value="{{ _('apply')|uc_first }}" type="submit">
         </form>
     </div>
+
+    <script>
+        $("#select_all").click(function() {
+            if ($("#classes :checkbox").length == $("#classes :checkbox:checked").length) {
+                $("#classes :checkbox").each(function(){this.checked = false;});
+                $("#select_all").html('{{ _('select all')|uc_first }}');
+            } else {
+                $("#classes :checkbox").each(function(){this.checked = true;});
+                $("#select_all").html('{{ _('deselect all')|uc_first }}');
+            }
+        })
+        $("#classes :checkbox").change(function() {
+            if ($("#classes :checkbox").length == $("#classes :checkbox:checked").length) {
+                $("#select_all").html('{{ _('deselect all')|uc_first }}');
+            } else {
+                $("#select_all").html('{{ _('select all')|uc_first }}');
+            }
+        });
+        $("#select_all_links").click(function() {
+            if ($("#links :checkbox").length == $("#links :checkbox:checked").length) {
+                $("#links :checkbox").each(function(){this.checked = false;});
+                $("#select_all_links").html('{{ _('select all')|uc_first }}');
+            } else {
+                $("#links :checkbox").each(function(){this.checked = true;});
+                $("#select_all_links").html('{{ _('deselect all')|uc_first }}');
+            }
+        })
+        $("#links :checkbox").change(function() {
+            if ($("#links :checkbox").length == $("#links :checkbox:checked").length) {
+                $("#select_all_links").html('{{ _('deselect all')|uc_first }}');
+            } else {
+                $("#select_all_links").html('{{ _('select all')|uc_first }}');
+            }
+        });
+    </script>
 {% endblock %}
