--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -32,9 +32,11 @@
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/font-awesome-4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/MarkerCluster.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/MarkerCluster.Default.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.css" />
 <link rel="stylesheet" href="/static/css/map.css" />
 
 <script src="/static/vendor/leaflet-1.3.4/leaflet.js"></script>
+<script src="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/fullscreen/Leaflet.fullscreen.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/geonames/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
