Small fix for empty global search

--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -36,5 +36,6 @@
                 $("#select_all").html('{{ _('select all')|uc_first }}');
             }
         });
+        $("#classes-0").trigger("change");
     </script>
 {% endblock %}
