--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -13,7 +13,8 @@
             {{ form.desc }} {{ form.desc.label }}<br />
             <h2>{{ _('date')|uc_first }}</h2>
             {{ form.begin_year(class_='year') }} {{ form.begin_month(class_='month') }} {{ form.begin_day(class_='day') }} {{ _('from')|uc_first }}<br />
-            {{ form.end_year(class_='year') }} {{ form.end_month(class_='month') }} {{ form.end_day(class_='day') }} {{ _('to')|uc_first }}
+            {{ form.end_year(class_='year') }} {{ form.end_month(class_='month') }} {{ form.end_day(class_='day') }} {{ _('to')|uc_first }}<br />
+            {{ form.exclude_entities_without_dates }} {{ form.exclude_entities_without_dates.label }}
             <h2>{{ _('classes')|uc_first }}</h2>
             <p id="select_all" class="select_all">{{ _('deselect all')|uc_first }}</p>
             {{ form.classes }}
