--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -18,7 +18,7 @@
             {% endif %}
             <br />
             {{ form.end_year(class_='year') }} {{ form.end_month(class_='month') }} {{ form.end_day(class_='day') }} {{ _('to')|uc_first }}<br />
-            {{ form.exclude_entities_without_dates }} {{ form.exclude_entities_without_dates.label }}
+            {{ form.include_dateless }} {{ form.include_dateless.label }}
             <h2>{{ _('classes')|uc_first }}</h2>
             <p id="select_all" class="select_all">{{ _('deselect all')|uc_first }}</p>
             {{ form.classes }}
