--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -8,6 +8,7 @@
         <div class="button-bar">
             <a href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
             <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
+            <a href="{{ url_for('reference_insert', code='external_reference') }}">+ {{ _('external reference')|uc_first }}</a>
             <a href="{{ url_for('reference_insert', code='carrier') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
