--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -62,6 +62,7 @@
                 <a href="{{ url_for('reference_add', origin_id=source.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=source.id) }}">+ {{ _('bibliography')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='edition', origin_id=source.id) }}">+ {{ _('edition')|uc_first }}</a>
+                <a href="{{ url_for('reference_insert', code='external_reference', origin_id=source.id) }}">+ {{ _('external reference')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['reference']|pager|safe }}
