--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -54,7 +54,7 @@
                             <div style="float:left;">
                                 {% if not node.value_type %}
                                     <p>
-                                        <strong>{{ _('selection'|uc_first) }}</strong>:
+                                        <strong>{{ _('selection')|uc_first }}</strong>:
                                         {{ _('multiple') if node.multiple else _('single') }}
                                     </p>
                                 {% endif %}
