Added Christoph to credits

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -62,6 +62,7 @@
         Asil Çetin<br />
         Bernhard Koschicek<br />
         Christof Rauchenberger<br />
+        Christoph Hoffmann<br />
         Johannes Preiser-Kapeller<br />
         Judith Pucher (Digital Laut)<br />
         Katharina Winckler<br />
