--- a/openatlas/templates/reference/update.html
+++ b/openatlas/templates/reference/update.html
@@ -10,5 +10,5 @@
         <p class="error">{{ _('error modified by %(username)s', username=modifier|safe) }}</p>
         <p><a class="button" href="{{ url_for('reference_update', id_=reference.id) }}">{{ _('reload')|uc_first }}</a></p>
     {% endif %}
-    {{ form|display_form|safe }}
+    {{ form|display_form(reference.system_type|replace(" ","_"))|safe }}
 {% endblock %}
