--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -46,6 +46,7 @@
             {{ profile_image_id|display_profile_image|safe }}
             <div style="float:left;">
                 {{ tables['info']|data_table|safe }}
+                {{ object_|display_external_references|safe }}
                 {{ object_|description|safe }}
             </div>
             <div style="clear:both;"></div>
