--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -68,7 +68,7 @@
                                 {% endif %}
                                 {% if node.description %}
                                     <div class="description">
-                                        <p class="description-title">{{ _('description')|uc_first }}</p>
+                                        <h2>{{ _('description')|uc_first }}</h2>
                                         <p style="width:40em;">{{ node.description|safe }}</p>
                                     </div>
                                 {% endif %}
