--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -34,6 +34,7 @@
             {{ profile_image_id|display_profile_image|safe }}
             <div style="float:left;">
                 {{ tables['info']|data_table|safe }}
+                {{ actor|display_external_references|safe }}
                 {{ actor|description|safe }}
             </div>
             <div style="clear:both;"></div>
