Added Christoph to team

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -57,12 +57,15 @@
         <strong>Daniel Kittel</strong><br />
         Quality Assurance
     </p>
+    <p>
+        <strong>Christoph Hoffmann</strong><br />
+        Frontend
+    </p>
     <h2>Contributors</h2>
     <p>
         Asil Çetin<br />
         Bernhard Koschicek<br />
         Christof Rauchenberger<br />
-        Christoph Hoffmann<br />
         Johannes Preiser-Kapeller<br />
         Judith Pucher (Digital Laut)<br />
         Katharina Winckler<br />
