--- a/openatlas/static/css/map.css
+++ b/openatlas/static/css/map.css
@@ -14,6 +14,10 @@
     border-radius: 5px;
 }
 
+svg.svg-inline--fa {
+    font-size: 1.2em;
+}
+
 #geometryForm {
     width: 300px;
     overflow: hidden;
