--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -26,6 +26,8 @@
     translate['map_info_linestring'] = '{{ _('map_info_linestring')|uc_first|safe }}';
     translate['map_info_close'] = '{{ _('map_info_close')|uc_first|safe }}';
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
+    translate['map_geonames_title'] = '{{ _('Search by location name or postcode')|safe }}';
+    translate['map_geonames_placeholder'] = '{{ _('Enter a location name')|safe }}';
 
     overlayHack = false;
     {% if session['settings']['overlay_hack'] %}
@@ -36,7 +38,7 @@
 
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/leaflet.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/fullscreen/leaflet.fullscreen.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/geonames/L.Control.Geonames.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.css" />
 <link rel="stylesheet" href="/static/vendor/fontawesome-5.8.1/css/fontawesome.min.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/MarkerCluster.css" />
@@ -48,6 +50,6 @@
 <script src="/static/vendor/fontawesome-5.8.1/js/all.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/fullscreen/Leaflet.fullscreen.min.js"></script>
-<script src="/static/vendor/leaflet-1.3.4/geonames/L.Control.Geonames.js"></script>
+<script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.js"></script>
