--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -3,8 +3,8 @@
     var thunderforestKey = '{{ config['THUNDERFOREST_KEY'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
     var gisPointSelected = {{ gis_data['gisPointSelected']|safe }};
-    var gisLinestringAll = {{ gis_data['gisLinestringAll']|safe }};
-    var gisLinestringSelected = {{ gis_data['gisLinestringSelected']|safe }};
+    var gisLineAll = {{ gis_data['gisLineAll']|safe }};
+    var gisLineSelected = {{ gis_data['gisLineSelected']|safe }};
     var gisPolygonAll = {{ gis_data['gisPolygonAll']|safe }};
     var gisPolygonSelected = {{ gis_data['gisPolygonSelected']|safe }};
     var gisPolygonPointSelected = {{ gis_data['gisPolygonPointSelected']|safe }};
