Refactored get_by_system_type using new entity SQL

--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -47,7 +47,7 @@
         {% endif %}
         {{ tables['orphaned_files']|pager|safe }}
     </div>
-    <div id="circular">
+    <div id="tab-circular">
         {{ tables['circular']|pager|safe }}
     </div>
 </div>
