--- a/openatlas/templates/admin/check_link_duplicates.html
+++ b/openatlas/templates/admin/check_link_duplicates.html
@@ -1,17 +1,15 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > {{ _('check links')|uc_first }}
+    > {{ _('check link duplicates')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ 'Data_integrity'|manual_link|safe }}
-    <p>
-        <a class="button" href="{{ url_for('admin_check_links', check='check')}}">{{ _('check links')|uc_first }}</a>
-        {{ _('this could take some time')|uc_first }}
-    </p>
     {% if table['data'] %}
+        <div class="button-bar">
+        <a href="{{ url_for('admin_check_link_duplicates', delete='delete') }}">{{ _('delete link duplicates')|uc_first }}</a>
+        </div>
         {{ table|pager|safe }}
-    {% elif check %}
+    {% else %}
         {{ _('Congratulations, everything looks fine!') }}
     {% endif %}
 {% endblock %}
