Function to check multiple links to single nodes

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -54,6 +54,7 @@
             <a href="{{ url_for('admin_check_links') }}">{{ _('check links')|uc_first }}</a>
             <a href="{{ url_for('admin_check_dates') }}">{{ _('check dates')|uc_first }}</a>
             <a href="{{ url_for('admin_check_link_duplicates')}}">{{ _('check link duplicates')|uc_first }}</a>
+            <a href="{{ url_for('admin_check_single_type_duplicates')}}">{{ _('check single type duplicates')|uc_first }}</a>
         {% endif %}
     </div>
 {% endblock %}
